fix spacing for search error and search form positioning for mobile

--- a/ckanext/justicehub_theme/public/search.css
+++ b/ckanext/justicehub_theme/public/search.css
@@ -43,6 +43,9 @@
 .dataset-count {
     color: #f65940;
 }
+.empty, .extra {
+    padding-left: 20px;
+}
 .filters .module-heading {
     color: #ffffff;
     background-color: #403644;
